--- a/CLPreprocessor/packages.config
+++ b/CLPreprocessor/packages.config
@@ -1,13 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net481" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="Microsoft.ClearScript.Core" version="7.4.5" targetFramework="net481" />
+  <package id="Microsoft.ClearScript.V8" version="7.4.5" targetFramework="net481" />
+  <package id="Microsoft.ClearScript.V8.ICUData" version="7.4.5" targetFramework="net481" />
+  <package id="Microsoft.ClearScript.V8.Native.win-x64" version="7.4.5" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net481" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
+  <package id="System.IO" version="4.3.0" targetFramework="net481" />
   <package id="System.IO.Pipelines" version="9.0.1" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net481" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net481" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net481" />
   <package id="System.Text.Encodings.Web" version="9.0.1" targetFramework="net481" />
   <package id="System.Text.Json" version="9.0.1" targetFramework="net481" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
+  <package id="YamlDotNet" version="16.3.0" targetFramework="net481" />
 </packages>
