--- a/CLPreprocessor/CLPreprocessor.csproj
+++ b/CLPreprocessor/CLPreprocessor.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigProcessor.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Preprocessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
